# matrixwatcher.one

./: .gitignore  CLOUDFLARE_TUNNEL_SETUP.md  CONTRIBUTING.md  CRYPTO_EVENTS_FIX.md  CRYPTO_PREDICTIONS_DEBUG.md  LICENSE  ORACLE_CHECKLIST.md  ORACLE_FINAL_PLAN.md  ORACLE_LIFEKHAKI_2026.md  ORACLE_NEXT_STEPS.md  ORACLE_PAYG_TRUTH.md  ORACLE_README.md  ORACLE_RESEARCH_SUMMARY.md  ORACLE_SETUP_INSTRUCTIONS.md  PATTERN_TRACKER_ГОТОВ.md  PWA_СТАТУС_ПРОВЕРКА.md  Procfile  README.md  ROADMAP_PRECURSOR_DETECTION.md  SUMMARY.md  UPGRADE_INSTRUCTIONS.md  analyze.py  config.example.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run_pwa.py  setup_telegram.py  start.py  test_anomaly.py  test_enhanced_system.py  test_pattern_tracker.py  test_simple.py  АВТОКАЛИБРОВКА.md  АУДИТ_ЗАВЕРШЁН.md  АУДИТ_ПОРОГОВ.md  АУДИТ_ЧЕСТНОСТИ_СИСТЕМЫ.md  БОЕВОЕ_ДЕЖУРСТВО.md  ВРЕМЯ_В_UTC.md  (+21 more)
.kiro/specs/matrix-watcher/: design.md  requirements.md  tasks.md
src/: __init__.py  stable_ver
src/analyzers/: __init__.py
src/analyzers/online/: __init__.py  historical_pattern_tracker.py
src/core/: __init__.py  types.py
src/monitoring/: __init__.py
src/sensors/: earthquake_sensor.py
tests/test_analyzers/: test_advanced.py  test_anomaly_detector.py  test_cluster.py  test_correlation.py  test_lag_correlation.py  test_precursor.py
tests/test_config/: test_config_properties.py
tests/test_core/: test_event_bus_properties.py  test_scheduler_properties.py  test_types_properties.py
tests/test_monitoring/: test_alerting.py  test_health_monitor.py
tests/test_sensors/: test_blockchain_sensor.py  test_crypto_sensor.py  test_network_sensor.py  test_news_sensor.py  test_random_sensor.py  test_system_sensor.py  test_weather_sensor.py
tests/test_storage/: test_export.py  test_jsonl_properties.py  test_parquet_properties.py
web/: api.py  broadcaster.py  server.py
web/events/: levels.jsonl  predictions.jsonl
web/static/: index.html  llms.txt  manifest.json  robots.txt  sitemap.xml  sw.js
